oh yeah, thats why I stopped making UIs in html

--- a/html/browser/common.css
+++ b/html/browser/common.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Almendra:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
-@import "cool.css";
+@import 'html/browser/cool.css';
 body
 {
 	padding: 0;
@@ -24,8 +24,8 @@ a, button, a:link, a:visited, a:active, .linkOn, .linkOff
 {
 	color: #00dd00;
 	text-decoration: none;
-	/* padding: 1px 4px 1px 4px;
-	margin: 0 2px 0 0; */
+	padding: 1px 4px 1px 4px;
+	margin: 0 2px 0 0;
 	cursor:pointer;
 }
 
@@ -149,11 +149,13 @@ h4
 
 .uiContent
 {
-	animation: scroll 0.25s 1;
-	clear: both;
-	padding: 16px;
-	font-family: Verdana, Geneva, sans-serif;
-	
+	width: auto;
+	height: 100%;
+	margin: 0px;
+	padding: 2px;
+	color: lime;
+	box-sizing: border-box;
+	font-family: 'Courier New', Courier, monospace;
 }
 
 .good
@@ -391,13 +393,11 @@ ul {
 ul a:before,
 p a:before {
 	color: #00dd00;
-	/* content: ' > '; */
 }
 
 ul a:after,
 p a:after {
 	color: #00dd00;
-	/* content: '  ';	 */
 }
 ul.sparse {
 	padding-bottom:20px;
@@ -667,4 +667,5 @@ td.undies_cell {
 	outline-color: green;
 	text-align: center;
 }
+
 
