--- a/html/browser/cool.css
+++ b/html/browser/cool.css
@@ -1,4 +1,3 @@
-
 /* 
 	Container for the Tab Table
 */
@@ -131,7 +130,7 @@ div.FlexTable a:hover {
 	Flex Container for a Setting Array
 */
 div.SettingArray {
-	display: flex;
+	/* display: flex; */
 	flex-direction: row;
 	flex-wrap: wrap;
 	width: 100%;
@@ -143,11 +142,23 @@ div.SettingArray {
 }
 
 /* 
+	background-color: rgba(0, 64, 0);
+	border: 1px solid green;
+	color: black;
+	text-align: center;
+	margin: auto;
+	padding: 5px;
+	white-space: nowrap;
+	color: lime;
+	display: inline-block;
+	width: 100%;
+	box-sizing: border-box;
+
 	Setting flexbox
 	Contains one setting name and one setting value
 */
 div.SettingFlex {
-	display: flex;
+	/* display: flex; */
 	flex-direction: row;
 	width: 100%;
 	background-color: rgb(0, 32, 0);
@@ -158,16 +169,14 @@ div.SettingFlex {
 	Setting Name
 */
 .SettingName {
-	display: flex;
 	width: auto;
 	padding: 5px;
+	margin: auto;
+	height: 100%;
 	font-weight: bold;
 	color: lime;
 	text-align: center;
 	line-height: 1;
-	justify-content: center;
-	flex-direction: column;
-	flex: 1;
 	white-space: nowrap;
 	box-sizing: border-box;
 	border: 1px solid green;
@@ -179,13 +188,13 @@ div.SettingFlex {
 	text-decoration: none;
 	margin: 0px !important;
 	height: 100%;
-	display: flex;
+	/* display: flex; */
 	background-color: rgb(0, 64, 0);
-	width: 100%;
+	/* width: 100%; */
 	color: lime;
-	line-height: 1;
-	justify-content: center;
-	flex-direction: column;
+	/* line-height: 1; */
+	/* justify-content: center; */
+	/* flex-direction: column; */
 	box-sizing: border-box;
 	border: 1px solid green;
 }
@@ -217,12 +226,13 @@ div.SettingArrayCol {
 	Contains one setting name and one setting value
 */
 div.SettingFlexCol {
-	display: flex;
-	flex-direction: column;
-	width: 100%;
+	/* display: flex; */
+	/* flex-direction: column; */
+	/* width: 100%; */
+	/* margin: 0px; */
 	background-color: rgba(0, 32, 0);
 	box-sizing: border-box;
-	flex: 1;
+	/* flex: 1; */
 }
 
 /* 
@@ -235,13 +245,14 @@ div.SettingFlexCol {
 	color: lime;
 	text-align: left;
 	line-height: 1;
+	margin: 0px;
 	box-sizing: border-box;
 	border: 1px solid green;
 	white-space: nowrap;
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	white-space: wrap;
+	/* display: flex; */
+	/* justify-content: center; */
+	/* flex-direction: column; */
+	/* white-space: wrap; */
 }
 
 /* 
@@ -251,13 +262,13 @@ div.SettingFlexCol a {
 	border: 1px solid green;
 	text-decoration: none;
 	padding: 5px;
-	display: flex;
-	/* margin: auto; */
+	/* display: flex; */
+	margin: 0px !important;
 	background-color: rgb(0, 64, 0);
 	width: 100%;
 	color: lime;
 	line-height: 1;
-	flex-grow: 1;
+	/* flex-grow: 1; */
 	box-sizing: border-box;
 	word-wrap: break-word;
 }
@@ -267,13 +278,27 @@ div.SettingFlexCol a {
 div.SettingFlexColInfo {
 	border: 1px solid green;
 	padding: 5px;
-	display: flex;
+	/* display: flex; */
 	background-color: rgb(0, 64, 0);
 	width: 100%;
 	color: lime;
 	line-height: 1;
-	flex-grow: 1;
+	/* flex-grow: 1; */
 	box-sizing: border-box;
+}
+/* 
+	to make it not coloumnize the text
+*/
+.NotCol {
+	display: inline-block !important;
+}
+
+/* 
+	to make it not coloumnize the text
+*/
+.Shrinkify {
+	flex-shrink: 1;
+
 }
 
 /* 
@@ -297,15 +322,17 @@ div.SettingValueSplit {
 	background-color: rgba(0, 32, 0);
 	border: 1px solid green;
 	box-sizing: border-box;
+	word-wrap:normal;
+	/* white-space: nowrap; */
 	flex: 1;
 }
 /* 
 	Setting Value, but split into multiple columns
 */
 a.SettingValue {
-	flex-grow: 1;
-	width: 999px;
-	display: flex;
+	/* flex-grow: 1; */
+	/* width: 999px; */
+	/* display: flex; */
 }
 
 /* 
@@ -330,7 +357,7 @@ div.SettingValueRowable {
 	background-color: rgba(0, 32, 0);
 	box-sizing: border-box;
 	margin: 0px;
-	flex: 1;
+	/* flex: 1; */
 	flex-basis: 25%;
 }
 
@@ -340,13 +367,12 @@ div.SettingValueRowable {
 .WideBar {
 	background-color: rgba(0, 64, 0);
 	border: 1px solid green;
-	color: black;
 	text-align: center;
 	margin: auto;
 	padding: 5px;
 	white-space: nowrap;
 	color: lime;
-	display: inline-block;
+	display: block;
 	width: 100%;
 	box-sizing: border-box;
 }
@@ -357,7 +383,6 @@ div.SettingValueRowable {
 	background-color: green;
 	border: 1px solid green;
 	text-align: center;
-	/* width: auto; */
 	color: lime;
 }
 /* 
@@ -426,27 +451,6 @@ div.BGsplit {
 div.uiContent {
 	/* cool subtle gradient */
 	/* background: linear-gradient(to bottom, rgba(0, 128, 0, 0.3), rgba(0, 128, 0, 0.1)); */
-	border: 1px solid green;
-	width: auto;
-	height: inherit;
-	margin: 0px;
-	padding: 2px;
-	font-size: 12px;
-	color: lime;
-	font-family: 'Courier New', Courier, monospace;
-}
-/* 
-	ColorBox
-*/
-div.ColorBox {
-	background-color: rgba(0, 64, 0);
-	border: 1px solid green;
-	color: black;
-	padding: 0px;
-	white-space: nowrap;
-	display: inline-block;
-	box-sizing: border-box;
-	max-width: fit-content;
 }
 /* 
 	ColorContainer for the cool color thing
@@ -464,12 +468,12 @@ div.ColorContainer {
 	ColorName for the cool color thing
 */
 div.ColorName {
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
+	/* display: flex; */
+	/* justify-content: center; */
+	/* flex-direction: column; */
 	font-size: inherit;
 	border: 1px solid green;
-	margin: auto;
+	/* margin: auto; */
 	padding: auto;
 	text-align: center;
 	font-size: 8px;
@@ -481,12 +485,12 @@ div.ColorName {
 */
 a.ColorBoxxo {
 	border: 1px solid green;
-	height: 100%;
-	margin: auto;
-	padding: 0px !important;
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
+	/* height: 100%; */
+	margin: 0px;
+	text-align: center;
+	/* display: flex; */
+	/* justify-content: center; */
+	/* flex-direction: column; */
 }
 /* 
 	A smol button
@@ -496,22 +500,22 @@ a.SmolButton {
 	border: 1px solid green;
 	text-align: center;
 	padding: 5px;
-	margin: auto;
+	/* margin: auto; */
 	white-space: nowrap;
 	color: lime;
 	box-sizing: border-box;
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	flex-shrink: 1;
-	height: 100%;
+	/* display: flex; */
+	/* justify-content: center; */
+	/* flex-direction: column; */
+	/* flex-shrink: 1; */
+	/* height: 100%; */
 	flex: 1;
 	/* font-size: 8px; */
 }
 /* 
 	A spacer
 */
-span.Spacer {
+.Spacer {
 	display: flex;
 	flex-grow: 999;
 	height: 0%;
@@ -537,15 +541,17 @@ div.PartsFlex {
 	flex-direction: column;
 	background-color: rgba(0, 32, 0);
 	font-size: inherit;
+	border: 1px solid green;
 	flex: 1;
 }
 /*
 A spacer for the PartsFlex
 */
 .PartsSpacer {
-	display: flex;
+	display: block;
 	flex-grow: 1;
 	flex-shrink: 1;
+	min-width: 10px;
 	margin: 5px 5px 0px 0px;
 }
 /*
@@ -581,6 +587,8 @@ A spacer for the PartsFlex
 	flex: 0 !important;
 	white-space: nowrap !important;
 	font-weight: normal;
+	justify-content: center;
+	flex-direction: column;
 }
 /* 
 	im not so smol
@@ -588,20 +596,21 @@ A spacer for the PartsFlex
 .NotSoSmolBox {
 	white-space: wrap !important;
 	font-weight: normal;
+	justify-content: center;
+	flex-direction: column;
 }
 
 /* 
 	Loadout Description
 */
 .LoadoutDesc {
-	display: flex;
+	/* display: flex; */
 	width: 100%;
 	padding: 5px;
 	color: lime;
 	line-height: 1;
 	font-size: 10px;
 	box-sizing: border-box;
-	border: 1px solid green;
 }
 /* 
 	A cool diagonal line for when you cant afford it!
@@ -663,6 +672,115 @@ A spacer for the PartsFlex
 	pointer-events: none;
 }
 
+/* 
+	KeyButton
+*/
+.KeyButton {
+	background-color: rgba(0, 64, 0);
+	border: 1px solid green;
+	padding: 5px;
+	display: flex;
+	width: 100%;
+	color: lime;
+	line-height: 1;
+	flex-grow: 1;
+	box-sizing: border-box;
+	justify-content: center;
+}
 
+/* 
+	KeyBox
+*/
+.KeyBox {
+	border: 1px solid green;
+	padding: 5px;
+	display: flex;
+	width: 100%;
+	color: lime;
+	line-height: 1;
+	flex-grow: 1;
+	box-sizing: border-box;
+	justify-content: center;
+}
+
+/* 
+	Words, but theyre off at a cool place? default
+*/
+.DefaultKeyText {
+	position: relative;
+}
+.DefaultKeyText:before {
+	content: 'Default';
+	font-size: 8px;
+	position: absolute;
+	right: 0px;
+	bottom: 0px;
+	color: rgb(0, 164, 0);
+	pointer-events: none;
+}
+
+/* 
+	Words, but theyre off at a cool place? Key1Text
+*/
+.Key1Text {
+	position: relative;
+}
+.Key1Text:before {
+	content: 'Primary';
+	font-size: 8px;
+	position: absolute;
+	right: 0px;
+	bottom: 0px;
+	color: rgb(0, 164, 0);
+	pointer-events: none;
+}
+
+/* 
+	Words, but theyre off at a cool place? Key2Text
+*/
+.Key2Text {
+	position: relative;
+}
+.Key2Text:before {
+	content: 'Secondary';
+	font-size: 8px;
+	position: absolute;
+	right: 0px;
+	bottom: 0px;
+	color: rgb(0, 164, 0);
+	pointer-events: none;
+}
+
+/* 
+	Words, but theyre off at a cool place? Key3Text
+*/
+.Key3Text {
+	position: relative;
+}
+.Key3Text:before {
+	content: 'Tertiary';
+	font-size: 8px;
+	position: absolute;
+	right: 0px;
+	bottom: 0px;
+	color: rgb(0, 164, 0);
+	pointer-events: none;
+}
+
+/* 
+	Words, but theyre off at a cool place? Key4Text
+*/
+.Key4Text {
+	position: relative;
+}
+.Key4Text:before {
+	content: 'Independant';
+	font-size: 8px;
+	position: absolute;
+	right: 0px;
+	bottom: 0px;
+	color: rgb(0, 164, 0);
+	pointer-events: none;
+}
 
 
